syntax = "proto3";
package epp.fee;

import "google/protobuf/wrappers.proto";
import "common.proto";

enum Command {
    Create = 0;
    Renew = 1;
    Transfer = 2;
    Delete = 4;
    Restore = 3;
}

enum Applied {
    Immediate = 0;
    Delayed = 1;
}

message Fee {
    string value = 1;
    google.protobuf.StringValue description = 2;
    google.protobuf.BoolValue refundable = 3;
    google.protobuf.StringValue grace_period = 4;
    Applied applied = 5;
}

message Credit {
    string value = 1;
    google.protobuf.StringValue description = 2;
}

message FeeCheck {
    google.protobuf.StringValue currency = 1;
    repeated FeeCommand commands = 2;
}

message FeeCommand {
    Command command = 1;
    common.Period period = 2;
}

message FeeCheckData {
    message FeeCommand {
        Command command = 1;
        google.protobuf.BoolValue standard = 2;
        common.Period period = 3;
        string currency = 4;
        repeated Fee fees = 5;
        repeated Credit credits = 6;
        google.protobuf.StringValue class = 7;
        google.protobuf.StringValue reason = 8;
    }

    bool available = 1;
    repeated FeeCommand commands = 2;
    google.protobuf.StringValue reason = 3;
}

message FeeData {
    string currency = 1;
    common.Period period = 2;
    repeated Fee fees = 3;
    repeated Credit credits = 4;
    google.protobuf.StringValue balance = 5;
    google.protobuf.StringValue credit_limit = 6;
}